# annomatic

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_annotation_with_wandb.py
.github/workflows/: pytest.yml
annomatic/annotator/: __init__.py  annotation.py  base.py  csv_annotator.py  file.py  postprocess.py  util.py
annomatic/annotator/file/: __init__.py  base.py  csv.py  parquet.py
annomatic/config/: __init__.py  base.py  benchmark.py  config.py  factory.py
annomatic/ensemble/: __init__.py  base.py
annomatic/io/: __init__.py  base.py  file.py
annomatic/io/file/: __init__.py  csv.py  parquet.py
annomatic/llm/: __init__.py  base.py  util.py
annomatic/llm/huggingface/: __init__.py  config.py  loader.py  model.py
annomatic/llm/openai/: __init__.py  config.py  loader.py  model.py  util.py  utils.py
annomatic/llm/vllm/: __init__.py  config.py  loader.py  model.py
annomatic/model/: base.py
annomatic/model/huggingface/: huggingface.py
annomatic/model/openai/: open_ai.py  openai.py  utils.py
annomatic/prompt/: base.py  prompt.py  segment.py  utils.py
annomatic/retriever/: __init__.py  base.py  diversity.py  similarity.py
examples/: building_prompts.py  few-shot.py  haystack_example.py  zero-shot.py
tests/annotator/: test_annotation.py  test_base_annotator.py  test_csv_annotator.py  test_util.py
tests/config/: test_config.py
tests/data/: input.csv
tests/ensemble/: test_ensemble.py
tests/model/: mock.py  test_open_ai.py  test_vllm.py
tests/prompt/: test_base.py  test_prompt.py  test_utils.py
tests/retriever/: test_retrievers.py
