[tool.poetry]
name = "annomatic"
version = "0.1.0"
description = ""
authors = ["Christoph Mandl <mandl23@ads.uni-passau.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.1"
tqdm = "~4.66.2"
haystack-ai = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.7.0"

# HuggingFace
[tool.poetry.group.huggingface]
optional = true

[tool.poetry.group.huggingface.dependencies]
transformers = "^4.34.0"


# Retriever (for ICL)
[tool.poetry.group.retriever]
optional = true

[tool.poetry.group.retriever.dependencies]
sentence-transformers = "^2.6.0"
scikit-learn = "^1.4.0"

# config for pre-commit
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
