[project]
name = "annomatic"
version = "0.1"
description = ''
readme = "README.md"
requires-python = ">=3.9"
keywords = []
authors = [
  { name="Christoph Mandl", email="c.mandl@media-bias-research.org" },
  { name="Tomáš Horych", email="t.horych@Media-bias-research.org" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ['pandas',
                'tqdm',
                'haystack-ai']

[project.optional-dependencies]
tests = [
  'pytest',
]
huggingface = [
  'transformers',
  'torch',
]
retriever = [
  'sentence-transformers',
  'scikit-learn',
]

[project.urls]
Homepage = "https://github.com/Media-Bias-Group/annomatic"
Issues = "https://github.com/Media-Bias-Group/annomatic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"